fix visible textarea when global css set background image

--- a/css/jquery.terminal-2.18.3.css
+++ b/css/jquery.terminal-2.18.3.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2020 Jakub Jankiewicz <https://jcubic.pl/me>
  * Released under the MIT license
  *
- * Date: Tue, 08 Sep 2020 08:07:20 +0000
+ * Date: Wed, 09 Sep 2020 08:40:30 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd-prompt, .cmd-prompt div {
@@ -47,7 +47,7 @@
     opacity: 0.01;
     filter: alpha(opacity = 0.01);
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.01);*/
-    background-color: transparent;
+    background: transparent;
     border: none;
     color: transparent;
     outline: none;
