--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -47,7 +47,7 @@
     opacity: 0.01;
     filter: alpha(opacity = 0.01);
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.01);*/
-    background-color: transparent;
+    background: transparent;
     border: none;
     color: transparent;
     outline: none;
